@@ -1,3 +1,8 @@
+2004-09-27  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/17585
+	* g++.dg/template/static8.C: New test.
+
 2004-09-27  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/17681
